--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,8 +5,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.MotionBlur=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=None
+GameDefaultMap=/Game/Level/BouncingRoom.BouncingRoom
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
